WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18450
SVG animation flickers when restarting
https://bugs.webkit.org/show_bug.cgi?id=18450
Summary
SVG animation flickers when restarting
Cameron McCormack (:heycam)
Reported
2008-04-12 19:08:48 PDT
When an animation restarts, it seems to briefly apply the end value before interpolating from the beginning again. Load the URL above, click the rect, wait the 2 seconds for the animation to finish, then click the rect again. Upon the second click, you can see that the rect briefly has width 100 before interpolating from 50 to 100.
Attachments
Patch for SVG animation flickers when restarting
(7.47 KB, patch)
2011-06-14 06:49 PDT
,
Felician Marton
kling
: review-
Details
Formatted Diff
Diff
Patch for SVG animation flickers when restarting
(8.62 KB, patch)
2011-06-14 09:01 PDT
,
Felician Marton
krit
: review-
krit
: commit-queue-
Details
Formatted Diff
Diff
Patch for SVG animation flickers when restarting
(8.72 KB, patch)
2011-06-27 02:39 PDT
,
Felician Marton
no flags
Details
Formatted Diff
Diff
Patch for SVG animation flickers when restarting
(8.71 KB, patch)
2011-06-28 00:10 PDT
,
Felician Marton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Felician Marton
Comment 1
2011-05-30 06:12:18 PDT
I can confirm this, it also accours on qt-linux.
Felician Marton
Comment 2
2011-06-14 06:49:12 PDT
Created
attachment 97110
[details]
Patch for SVG animation flickers when restarting
Andreas Kling
Comment 3
2011-06-14 06:50:57 PDT
Comment on
attachment 97110
[details]
Patch for SVG animation flickers when restarting View in context:
https://bugs.webkit.org/attachment.cgi?id=97110&action=review
> Source/WebCore/ChangeLog:8 > + This change eliminates the flickering when SVG animation restarting.
This is not a sufficient ChangeLog. Please explain what your patch is doing and why. :-)
Felician Marton
Comment 4
2011-06-14 09:01:09 PDT
Created
attachment 97126
[details]
Patch for SVG animation flickers when restarting
Nikolas Zimmermann
Comment 5
2011-06-15 03:34:40 PDT
Dirk, do you think this patch is reasonable as-is?
Dirk Schulze
Comment 6
2011-06-18 22:58:05 PDT
Comment on
attachment 97126
[details]
Patch for SVG animation flickers when restarting Patch looks great! We need regression tests for changes like that. Sadly I don't know a way how to test. Maybe with SVGSVGElements getCurrentTime()? Can you check this? Anyway, even if there is no way to test it, this needs to be noted in the changelog. But please try to find a way first.
Felician Marton
Comment 7
2011-06-27 02:39:45 PDT
Created
attachment 98691
[details]
Patch for SVG animation flickers when restarting I think there is no way to tests SVG flickering. I noted it in the ChangeLog.
Nikolas Zimmermann
Comment 8
2011-06-27 08:22:41 PDT
Comment on
attachment 98691
[details]
Patch for SVG animation flickers when restarting View in context:
https://bugs.webkit.org/attachment.cgi?id=98691&action=review
Looks good to me, you forgot to ask for review, though - can you upload a new one that I can r+ and cq+ ?
> Source/WebCore/ChangeLog:18 > + The following methods just modified for standardization:
s/standardization/consistency/.
> Source/WebCore/ChangeLog:22 > + No new tests, because currently there is no way to test SVG flickering at zero time.
One space too much.
Felician Marton
Comment 9
2011-06-27 08:52:13 PDT
The latest patch is incorrect. Thats why I marked it to obsolate.
Felician Marton
Comment 10
2011-06-28 00:02:49 PDT
(In reply to
comment #9
)
> The latest patch is incorrect. Thats why I marked it to obsolate.
The patch is ok. There was some problem with my repo.
Felician Marton
Comment 11
2011-06-28 00:10:16 PDT
Created
attachment 98869
[details]
Patch for SVG animation flickers when restarting Only spelling and spacing fixed according to the prev patch.
Nikolas Zimmermann
Comment 12
2011-06-28 01:34:54 PDT
Comment on
attachment 98869
[details]
Patch for SVG animation flickers when restarting r=me!
WebKit Review Bot
Comment 13
2011-06-28 01:58:42 PDT
Comment on
attachment 98869
[details]
Patch for SVG animation flickers when restarting Clearing flags on attachment: 98869 Committed
r89907
: <
http://trac.webkit.org/changeset/89907
>
WebKit Review Bot
Comment 14
2011-06-28 01:58:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug